[gd_scene load_steps=22 format=2]

[ext_resource path="res://Assets/background_start.png" type="Texture" id=1]
[ext_resource path="res://Assets/boss2-test.png" type="Texture" id=2]
[ext_resource path="res://Assets/hedgehog_pwr_sheet.png" type="Texture" id=3]
[ext_resource path="res://Scripts/LevelSelect.gd" type="Script" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 100, 117 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 100, 0, 100, 117 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 117, 100, 117 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 100, 117, 100, 117 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 234, 100, 117 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 600, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 700, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 100, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 200, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 300, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 400, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 500, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 600, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 700, 200, 100, 100 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="LevelSelect" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" type="Sprite" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
position = Vector2( 608.251, 302 )
scale = Vector2( 1.73643, 1.51 )
texture = ExtResource( 1 )

[node name="Level1Button" type="Button" parent="."]
margin_left = 64.0
margin_top = 64.0
margin_right = 192.0
margin_bottom = 192.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="Level1Button"]
position = Vector2( 64, 64 )
scale = Vector2( 1.12, 1.09402 )
frames = SubResource( 6 )
frame = 2
playing = true

[node name="Level2Button" type="Button" parent="."]
margin_left = 256.0
margin_top = 64.0
margin_right = 384.0
margin_bottom = 192.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Level2Button"]
position = Vector2( 64, 64 )
scale = Vector2( 1.28, 1.28 )
frames = SubResource( 17 )
frame = 4
playing = true

[node name="Button" type="Button" parent="."]
margin_left = 576.0
margin_top = 528.0
margin_right = 640.0
margin_bottom = 560.0
text = "back"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Level1Button" to="." method="_on_Level1Button_pressed"]
[connection signal="pressed" from="Level2Button" to="." method="_on_Level2Button_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
